--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOla</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <!--Barra de navegación-->
+    </nav>
+  </body>
 </html>
