--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>sonido 23</h1>
+    <button>Hola mundo</button>
     <h2>Hola 2.0</h2>
     <h2>probando</h2>
     <p>Buenas noches</p>
