Creación de "assets" con css, js e IMG

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 
+<!-- Página para realizar landing page (para mostrar el martes)-->
+
 <body>
     <h1>sonido 23</h1>
     <p>hola hola</p>
