Aporte de Sebatian Leon

--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Control</title>
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
-<!-- Página para realizar landing page (para mostrar el martes)-->
-
 <body>
-    <h1>sonido 23</h1>
-    <p>hola hola</p>
-    <h2>nolberto velasquex vargas</h2>
-    <p>holi holi holi</p>
-    <h2>Hola 2.0</h2>
-    <h2>probando</h2>
-    <p>Buenas noches</p>
-    <h3>Hola 3.0</h3>
-    <h4>Hola 4.0</h4>
+    <header>
+        <nav>
+            <a href="#">Inicio</a>
+        </nav>
+        <section class="textos">
+            <h1>Control de domicilios</h1>
+            <h2>lo de Nolverto</h2>
+
+        </section>
+        <section class="formulario">
+            <h4>Formulario</h4><br>
+            <input class="control" type="text" name="nombre" id="nombres" placeholder="Ingrese su Nombre">
+            <input class="control" type="text" name="nombre" id="nombres" placeholder="Ingrese su Apellido">
+            <input class="control" type="email" name="nombre" id="nombres" placeholder="Ingrese su Correo">
+            <p>Estoy deacuerdo con <a href="#">Terminos y condiciones</a></p>
+            <input class="boton" type="submit" value="Enviar">
+        </section>
+        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-11.00,-16.44 C95.08,250.97 178.04,99.00 500.00,49.98 L516.08,165.13 L0.00,150.00 Z" style="stroke: none; fill: #ffffff;"></path></svg></div>
+    </header>
+    <main>
+        <section class="contenedor">
+            <h2>Sobre nosotros</h2>
+            <div class="contenedor-sobre-nosotros">
+                <img src="https://c4.wallpaperflare.com/wallpaper/162/73/224/ciudad-gato-noche-varanda-wallpaper-preview.jpg" alt="" class="imagen1">
+                <div class="contenenido-textos">
+                    <h3><span>1</span>Nestros productos</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus mollitia ut cum aspernatur sint, nostrum praesentium vero earum dicta nulla ipsam molestias tenetur deleniti ad similique laudantium cupiditate soluta nemo.</p>
+                    <h3><span>2</span>Colaboradores</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae amet perferendis deleniti reprehenderit natus consectetur, ratione mollitia cum laboriosam id numquam soluta repellendus hic quibusdam impedit nemo dolores, dolorem aliquid.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
