Actualización | Nicolas C. Lugo

--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control</title>
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="fontello.css" />
+
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="#">Inicio</a>
-        </nav>
-        <section class="textos">
-            <h1>Control de domicilios</h1>
-            <h2>lo de Nolverto</h2>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <a href="https://api.whatsapp.com/send?phone=3024292650&text=Hola%21%20Como%20podemos%20asesorarte?." class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
+    <header>
+
+        <section class="textos">
+            <h1>Es hora de pensar en el futuro</h1>
+            <br>
+            <br>
+            <h2>Tu sistema de control de domicilios es excelente, pero llevemoslo al próximo nivel</h2>
         </section>
+
         <section class="formulario">
             <h4>Formulario</h4><br>
             <input class="control" type="text" name="nombre" id="nombres" placeholder="Ingrese su Nombre">
@@ -33,12 +40,12 @@
         <section class="contenedor">
             <h2>Sobre nosotros</h2>
             <div class="contenedor-sobre-nosotros">
-                <img src="https://c4.wallpaperflare.com/wallpaper/162/73/224/ciudad-gato-noche-varanda-wallpaper-preview.jpg" alt="" class="imagen1">
+                <img src="https://apollo-virginia.akamaized.net/v1/files/xmg09z457rid2-CO/image;s=850x0" alt="" class="imagen1">
                 <div class="contenenido-textos">
-                    <h3><span>1</span>Nestros productos</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus mollitia ut cum aspernatur sint, nostrum praesentium vero earum dicta nulla ipsam molestias tenetur deleniti ad similique laudantium cupiditate soluta nemo.</p>
-                    <h3><span>2</span>Colaboradores</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae amet perferendis deleniti reprehenderit natus consectetur, ratione mollitia cum laboriosam id numquam soluta repellendus hic quibusdam impedit nemo dolores, dolorem aliquid.</p>
+                    <h3><span>1</span>Nuestro producto</h3>
+                    <p>Pensando en hacer tu trabajo de una manera más efectiva,<br> creamos un software que te permite realizar tus domicilios <br> de forma eficaz y ágil.</p>
+                    <h3><span>2</span>Características</h3>
+                    <p>Gestiona tu negocio, controla tus domicilios desde que se empacan hasta su destino.</p>
                 </div>
             </div>
         </section>
