--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://www.loremicon.com/rndm/128/128/76645779/png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <title>Control</title>
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="fontello.css" />
@@ -19,21 +22,33 @@
     </a>
     <header>
 
-        <section class="textos">
+        <section class="textos ">
             <h1>Es hora de pensar en el futuro</h1>
             <br>
             <br>
             <h2>Tu sistema de control de domicilios es excelente, pero llevemoslo al próximo nivel</h2>
         </section>
 
-        <section class="formulario">
-            <h4>Formulario</h4><br>
-            <input class="control" type="text" name="nombre" id="nombres" placeholder="Ingrese su Nombre">
-            <input class="control" type="text" name="nombre" id="nombres" placeholder="Ingrese su Apellido">
-            <input class="control" type="email" name="nombre" id="nombres" placeholder="Ingrese su Correo">
-            <p>Estoy deacuerdo con <a href="#">Terminos y condiciones</a></p>
-            <input class="boton" type="submit" value="Enviar">
-        </section>
+        <div class="container-fluid formulario ">
+            <form class="container-fluid">
+                <h4>Formulario</h4><br>
+                <div class="row">
+                    <div class="col">
+                        <input class="control" type="text" name="nombre" id="nombres" placeholder="Nombre">
+                    </div>
+                    <div class="col">
+                        <input class="control" type="text" name="nombre" id="apellidos" placeholder="Apellido">
+                    </div>
+                </div>
+                <hr>
+                <input class="control" type="email" name="nombre" id="nombres" placeholder="Ingrese su Correo">
+
+                <input class="control" type="checkbox" name="tyc" id="tyc"><label for="tyc">Acepto los <a href="#">Terminos y condiciones</a> al registrarme.</label>
+
+                <input class="boton" type="submit" value="Enviar">
+            </form>
+
+        </div>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-11.00,-16.44 C95.08,250.97 178.04,99.00 500.00,49.98 L516.08,165.13 L0.00,150.00 Z" style="stroke: none; fill: #ffffff;"></path></svg></div>
     </header>
     <main>
@@ -50,6 +65,8 @@
             </div>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
